# FileMind

./: .env.example  .gitignore  DISTRIBUTION.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  ops.rs  scan.rs  seed.rs  watcher.rs
src/components/: ActivityChart.tsx  BatchSummaryCard.tsx  CommandPalette.tsx  ExtDistChart.tsx  FileDetailDrawer.tsx  FileIcon.tsx  FileRow.tsx  GlassCard.tsx  Layout.tsx  PortalPopover.tsx  ScanCard.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  TopTagsCard.tsx  WatcherIndicator.tsx
src/lib/: api.ts  models.ts  shortcuts.ts  theme.ts  types.ts  utils.ts
src/pages/: Chat.tsx  Dashboard.tsx  Duplicates.tsx  Files.tsx  Graph.tsx  History.tsx  ProjectDetail.tsx  Projects.tsx  Settings.tsx  TempFiles.tsx  Timeline.tsx  Usage.tsx  Welcome.tsx
src/styles/: globals.css
